# Semester-project-2---Gripper

./: CMakeList.txt  CMakeLists.txt  Gripper.cpp  Gripper.hpp  README.md  databaseFunctions.cpp  functions.cpp  functions.hpp  gripperdata.db  main.cpp
